--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteor",
+  "name": "meteor-react-redux",
   "private": true,
   "scripts": {
     "start": "meteor run"
@@ -7,22 +7,34 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
-    "history": "^4.6.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-chmod": "^2.0.0",
+    "gulp-clone": "^1.0.0",
+    "gulp-concat-filenames": "^1.2.0",
+    "gulp-debug": "^3.1.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-git": "^2.4.0",
+    "gulp-help": "^1.6.1",
+    "gulp-if": "^2.0.2",
+    "gulp-json-editor": "^2.2.1",
+    "gulp-less": "^3.3.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-tap": "^1.0.1",
     "meteor-node-stubs": "~0.2.4",
-    "prop-types": "^15.5.10",
     "react": "^15.5.4",
-    "react-addons-pure-render-mixin": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-mounter": "^1.2.0",
     "react-redux": "^5.0.5",
     "react-redux-meteor": "^4.5.1",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
-    "redux-thunk": "^2.2.0"
-  }
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.68.5"
+  },
+  "devDependencies": {}
 }
